sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  val taille=getNombreValeurs()
  var temp=0
  var j=1
  for (i<-1 to n-1) {
    temp=getValeur(i)
    while ((getValeur(j)<temp)||(j==0)){
      if (plusPetit(i,j)) {echange(i,j)}
      j=j-1
    }
    copie(temp,j)
    j=i
  }
}